# NEZAMY_RAG

./: .gitignore  README.md  data_pipeline.ipynb  pyproject.toml  requirements.txt  test.ipynb
vectorDB_V4/: chroma.sqlite3
